--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,7 @@ nest-asyncio==1.6.0
 notebook==7.4.7
 notebook_shim==0.2.4
 numpy==2.3.4
+nvidia-nccl-cu12==2.29.3
 packaging==25.0
 pandas==2.3.3
 pandocfilters==1.5.1
@@ -127,3 +128,4 @@ webencodings==0.5.1
 websocket-client==1.9.0
 wheel==0.45.1
 widgetsnbextension==4.0.14
+xgboost==3.2.0
